# blockrun-llm-vip

./: .gitignore  README.md  pyproject.toml
blockrun_llm_vip/: __init__.py  _anthropic_client.py  _audio_client.py  _common.py  _exa_client.py  _http.py  _image_client.py  _openai_client.py  _phone_client.py  _polling.py  _portrait.py  _realface.py  _search_client.py  _solana_transport.py  _solana_wallet.py  _transport.py  _validation.py  _video_client.py  _voice_client.py  _wallet.py  _x402.py
docs/: real-person-flow.md
docs/plans/: 2026-06-02-solana-chain-support-design.md
tests/: test_audio.py  test_image.py  test_polling.py  test_search_exa.py  test_solana.py  test_video.py  test_voice_phone.py
