[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blockrun-llm-vip"
version = "0.4.0"
description = "Drop-in Anthropic & OpenAI Python SDK clients for BlockRun — genuine native passthrough (real signatures, system_fingerprint, native structure) with x402 USDC micropayments on Base or Solana. No model substitution, no response reshaping. Plus AI generation clients: image, search (Grok/Exa), audio (TTS/music), and AI voice calls."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "BlockRun", email = "vicky@blockrun.ai" }]
keywords = ["anthropic", "openai", "claude", "gpt", "x402", "usdc", "base", "solana", "llm", "passthrough", "seedance", "video", "realface", "bytedance", "image-generation", "text-to-speech", "elevenlabs", "grok", "exa", "web-search", "voice-ai"]
dependencies = [
    "httpx>=0.27",
    "eth-account>=0.11",
    "python-dotenv>=1.0",
    # The official SDKs — VIP wraps them so genuine native signals (thinking
    # signature, system_fingerprint, native SSE) survive via the SDK's own parsing.
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.optional-dependencies]
# chain="solana" pays USDC on Solana via the x402 SVM signer (pulls solders +
# base58 + solana-py). Base-only users don't need this.
solana = ["x402[svm]>=2.0.0"]

[project.urls]
Homepage = "https://blockrun.ai"

[tool.hatch.build.targets.wheel]
packages = ["blockrun_llm_vip"]
